# wallpaper-picker-rs

./: Cargo.toml  LICENSE  cargo.toml  install.sh  readme.md
automation/: before-automating.md  install.sh
automation/assets/: Wallpaper_Picker.desktop
automation/service/: wallpaper-swap.service  wallpaper-swap.timer
src/: main.rs
