[package]
name = "Wallpaper_Picker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
dirs = "5.0"
notify-rust = "4.0"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
